# braid

./: Main.hs  MiniConcatTypechecker.hs  README.md  braid.cabal  expanded-spec.md  repl  spec-code.md  spec-sums.md  spec-update-exponentials.md
app/: Main.hs
examples/: adder-factory.braid  bare-rows.braid  boole.braid  case.braid  choose.braid  classify.braid  code.braid  factories.braid  fizzbuzz.braid  gcd.braid  guards.braid  io.braid  iterate.braid  laws.braid  lists.braid  loop-until.braid  loop.braid  map-square-plus.braid  matrices.braid  nat.braid  parallel.braid  predicates.braid  railway.braid  recursion.braid  sac.braid  shapes.braid  sniff.braid  sum-of-squares.braid  transpose.braid  tree.braid  types.braid  validate.braid  wires.braid  zip.braid
notes/: haskell-tooling-install.md
src/: MiniConcatTypechecker.hs
test/: Tests.hs
